--- a/style.css
+++ b/style.css
@@ -10,4 +10,10 @@ html {
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+canvas {
+  border: 1px black solid;
 }
